# privySHA

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD-PARTY-NOTICES.md  USAGE_GUIDE.md  comprehensive_test.py  pyproject.toml  pyproject_minimal.toml  test_migration.py
.github/workflows/: ci.yml
docs/: api-reference.md  architecture.md  contributing.md  core-concepts.md  debugging.md  examples.md  faq.md  getting-started.md  index.md  model-gateway.md  optimization.md  pipeline.md  prompt-ir.md  roadmap.md  routing.md  security.md
examples/: adapter_usage.py  basic_usage.py  v2_examples.py
src/privysha/: __init__.py  agent.py  pipeline.py
src/privysha/adapters/: __init__.py  base.py  claude_adapter.py  factory.py  grok_adapter.py  hf_adapter.py  mock_adapter.py  model_adapter.py  ollama_adapter.py  openai_adapter.py  universal_adapter.py
src/privysha/compiler/: __init__.py  optimizer_engine.py  prompt_compiler.py
src/privysha/debug/: __init__.py  debugger.py
src/privysha/ir/: __init__.py  ir_builder.py  prompt_ir.py
src/privysha/parser/: __init__.py  prompt_ast.py
src/privysha/routing/: __init__.py  model_router.py
src/privysha/security/: __init__.py  security_layer.py
src/privysha/stages/: compiler.py  context.py  optimizer.py  sanitizer.py
src/privysha/utils/: pii_detector.py
tests/: comprehensive_test.py  test_adapter_factory.py  test_agent.py  test_base_adapter.py  test_basic_functionality.py  test_hf_adapter.py  test_model_adapter.py  test_new_adapters.py  test_ollama_adapter.py  test_openai_adapter.py  test_optimizer.py  test_pipeline.py  test_sanitizer.py
